Completed forms for Dynamic groups Changed some alert message with a modal window

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -71,7 +71,7 @@
 				$('#loading').hide()
 			},
 			success : function() {
-				alert("Operation Completed");
+				showMessageDialog("{% trans 'Operation Completed' %}", "{% trans 'OK'%}");
 			},
 			timeout: 120000
 		});
