--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -180,6 +180,8 @@
 					</div>
 					<div id="modalresponsecontainer">
 					</div>
+					<div id="message-dialog">
+					</div>
 					{% block content %}{% endblock %}
 				</p>
 			</div>
