Add delete and edit on DynamicGroups

--- a/static/css/jeegoocontext/skins/cm_default/style.css
+++ b/static/css/jeegoocontext/skins/cm_default/style.css
@@ -38,3 +38,5 @@ div.context ul.cm_default span.drive{background-image:url(images/icons/drive.gif
 div.context ul.cm_default span.folder{background-image:url(images/icons/folders.gif)}
 div.context ul.cm_default span.file{background-image:url(images/icons/file.gif)}
 div.context ul.cm_default span.ok{background-image:url(images/icons/ok.gif)}
+div.context ul.cm_default span.edit{background-image:url(images/icons/edit.gif)}
+div.context ul.cm_default span.delete{background-image:url(images/icons/delete.gif)}
