Fixed problem on modal windows persistent values

--- a/templates/widgets/dynagroups/dynagroupstree.html
+++ b/templates/widgets/dynagroups/dynagroupstree.html
@@ -28,7 +28,8 @@
 						modal : true,
 						title : 'Dynamic Group',
 						minHeight : 200,
-						minWidth : 500
+						minWidth : 500,
+						buttons : {}
 					});
 					$("#dynagroup-dialog").show();
 				} 
