Updated Spec file removing Database Creation Fixed problem in Filters Names

--- a/templates/widgets/puppetclasses/puppetclasses.html
+++ b/templates/widgets/puppetclasses/puppetclasses.html
@@ -14,9 +14,9 @@
 				var filterType
 				//Verifying if the context menu is for a folder or for a server
 				if(node.data.isFolder) {
-					filterType = "class_filter"
+					filterType = "class"
 				} else {
-					filterType = "identity_filter"
+					filterType = "identity"
 				}
 
 				//If we are working on a folder the filter should be for the complete path and not for the single folder selected
