--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -116,6 +116,13 @@
 	function generate_url(taskname, uuid){
 	    return "{% url get_progress taskname=12345 taskid=6789 %}".replace("12345", taskname).replace("6789", uuid);
 	}
+	
+	$(function() {
+        $( "#accordion" ).accordion({
+            collapsible: true,
+            active: false
+        });
+    });
 </script>
 
 <div id="loading">
@@ -127,27 +134,32 @@
 
 <div class="container-grid">
 	<div id="uploadForm"></div>
-    <div class="column span-12">
-        {% if app_list %}
-            {% for app in app_list %}
-                <div class="module" id="app_{{ app.name|lower }}">
-                    <h2><a href="{{ app.app_url }}" class="section">{% trans app.name %}</a></h2>
-                    {% for model in app.models %}
-                        <div class="row">
-                            {% if model.perms.change %}<a href="{{ model.admin_url }}">{{ model.name }}</a>{% else %}<span>{{ model.name }}</span>{% endif %}
-                            <ul class="actions">
-                                <li class="add-link">{% if model.perms.add %}<a href="{{ model.admin_url }}add/">{% trans 'Add' %}</a>{% else %}&nbsp;{% endif %}</li>
-                                <li class="change-link"> {% if model.perms.change %}<a href="{{ model.admin_url }}">{% trans 'Change' %}</a>{% else %}&nbsp;{% endif %}</li>
-                            </ul>
-                       </div>
-                   {% endfor %}
-               </div>
-           {% endfor %}
-        {% else %}
-            <p>{% trans "You don´t have permission to edit anything." %}</p>
-        {% endif %}
-    </div>
-	<div class="column span-6">
+	<div class="span-22" style="padding-bottom: 10px;">
+	<div id="accordion">
+    	<h3>&nbsp;&nbsp;{% trans 'DataBase' %}</h3>
+    	<div>
+			{% if app_list %}
+	            {% for app in app_list %}
+	                <div class="module" id="app_{{ app.name|lower }}">
+	                    <h2><a href="{{ app.app_url }}" class="section">{% trans app.name %}</a></h2>
+	                    {% for model in app.models %}
+	                        <div class="row">
+	                            {% if model.perms.change %}<a href="{{ model.admin_url }}">{{ model.name }}</a>{% else %}<span>{{ model.name }}</span>{% endif %}
+	                            <ul class="actions">
+	                                <li class="add-link">{% if model.perms.add %}<a href="{{ model.admin_url }}add/">{% trans 'Add' %}</a>{% else %}&nbsp;{% endif %}</li>
+	                                <li class="change-link"> {% if model.perms.change %}<a href="{{ model.admin_url }}">{% trans 'Change' %}</a>{% else %}&nbsp;{% endif %}</li>
+	                            </ul>
+	                       </div>
+	                   {% endfor %}
+	               </div>
+	           {% endfor %}
+	        {% else %}
+	            <p>{% trans "You don´t have permission to edit anything." %}</p>
+	        {% endif %}
+		</div>
+	</div>
+	</div>
+	<div class="column span-12">
 		<div class="module actions" id="custom-refresh-action-module">
 		<h2>{% trans 'Refresh Actions' %}</h2>
 		<ul class="actionlist">
@@ -167,33 +179,35 @@
 				<a href="#" onclick="executeAction('Update User Groups', '{% url action_executer "update_user_groups" "ASYNC"%}');">{% trans 'Update User Groups' %}</a>
 			</li>
 			<li>
-				<a href="#" onclick="executeAction('Update Puppet Classes', '{% url action_executer "updated_puppet_classes" "ASYNC"%}');">{% trans 'Update Puppet Classes' %}</a>
+				<a href="#" oncliactive: false,ck="executeAction('Update Puppet Classes', '{% url action_executer "updated_puppet_classes" "ASYNC"%}');">{% trans 'Update Puppet Classes' %}</a>
 			</li>
 			<li>
 				<a href="#" onclick="executeAction('Update Dynamic Groups', '{% url action_executer "updated_dyna_groups" "ASYNC"%}');">{% trans 'Update Dynamic Groups' %}</a>
 			</li>
 		</ul>
 		</div>
+    </div>
+	<div class="column span-10">
 		<div class="module actions" id="custom-import-action-module">
-		<h2>{% trans 'Import Actions' %}</h2>
-		<ul class="actionlist">
-			<li>
-				<a href="#" onclick="getUploadForm('{% url get_upload_form 'importPuppetClass' %}', 'uploadForm')">{% trans 'Import PuppetClasses' %}</a>
-			</li>
-			<li>
-				<a href="#" onclick="getUploadForm('{% url get_upload_form 'importAcls' %}', 'uploadForm')">{% trans 'Import ACLs' %}</a>
-			</li>
-		</ul>
+			<h2>{% trans 'Import Actions' %}</h2>
+			<ul class="actionlist">
+				<li>
+					<a href="#" onclick="getUploadForm('{% url get_upload_form 'importPuppetClass' %}', 'uploadForm')">{% trans 'Import PuppetClasses' %}</a>
+				</li>
+				<li>
+					<a href="#" onclick="getUploadForm('{% url get_upload_form 'importAcls' %}', 'uploadForm')">{% trans 'Import ACLs' %}</a>
+				</li>
+			</ul>
 		</div>
 		<div class="module actions" id="custom-import-action-module">
-		<h2>{% trans 'Other Actions' %}</h2>
-		<ul class="actionlist">
-			<li>
-				<a href="#" onclick="executeAction('Send Inventory Email', '{% url send_inventory_mail %}');">{% trans 'Send Inventory Email' %}</a>
-			</li>
-		</ul>
+			<h2>{% trans 'Other Actions' %}</h2>
+			<ul class="actionlist">
+				<li>
+					<a href="#" onclick="executeAction('Send Inventory Email', '{% url send_inventory_mail %}');">{% trans 'Send Inventory Email' %}</a>
+				</li>
+			</ul>
 		</div>
-        <div class="module actions" id="recent-actions-module">
+		<div class="module actions" id="recent-actions-module">
             <h2>{% trans 'Recent Actions' %}</h2>
             <div class="module">
                 <h3>{% trans 'My Actions' %}</h3>
@@ -209,6 +223,6 @@
                 {% endif %}
             </div>
         </div>
-    </div>
+	</div>
 </div>
 {% endblock %}
