Fixed style problem in admin area Updated AgentUpdates with a new filter

--- a/templates/admin/includes_grappelli/header.html
+++ b/templates/admin/includes_grappelli/header.html
@@ -41,7 +41,7 @@
                 <!-- Documentation -->
                 {% url django-admindocs-docroot as docsroot %}
                 {% if docsroot %}
-                    <li><a href="{{ docsroot }}">{% trans 'Development Doc' %}</a></li>
+                    <li><a href="{{ docsroot }}">{% trans 'Devel. Doc' %}</a></li>
                 {% endif %}
                 
             {% endblock %}
