Added single DynaGroup Refresh Action (with right click)

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -68,6 +68,11 @@
 		background: -webkit-gradient(linear, left top, left bottom, from(#E3E3E3), to(#D6D6D6));
 		background: -o-linear-gradient(top, #E3E3E3, #D6D6D6);
     }
+    
+    .adminimage {
+    	vertical-align: middle;
+    	width: 32;
+    }
 	
 	
 </style>
