--- a/static/css/jeegoocontext/skins/cm_default/style.css
+++ b/static/css/jeegoocontext/skins/cm_default/style.css
@@ -40,3 +40,4 @@ div.context ul.cm_default span.file{background-image:url(images/icons/file.gif)}
 div.context ul.cm_default span.ok{background-image:url(images/icons/ok.gif)}
 div.context ul.cm_default span.edit{background-image:url(images/icons/edit.gif)}
 div.context ul.cm_default span.delete{background-image:url(images/icons/delete.gif)}
+div.context ul.cm_default span.refresh{background-image:url(images/icons/refresh.gif)}
