Fixed paste problem in admin file

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -223,7 +223,7 @@
 					<a href="#" onclick="executeAction('Update User Groups', '{% url action_executer "update_user_groups" "ASYNC"%}');">{% trans 'Update User Groups' %}</a>
 				</li>
 				<li>
-					<a href="#" oncliactive: false,ck="executeAction('Update Puppet Classes', '{% url action_executer "updated_puppet_classes" "ASYNC"%}');">{% trans 'Update Puppet Classes' %}</a>
+					<a href="#" onclick="executeAction('Update Puppet Classes', '{% url action_executer "updated_puppet_classes" "ASYNC"%}');">{% trans 'Update Puppet Classes' %}</a>
 				</li>
 				<li>
 					<a href="#" onclick="executeAction('Update Dynamic Groups', '{% url action_executer "updated_dyna_groups" "ASYNC"%}');">{% trans 'Update Dynamic Groups' %}</a>
