Fixed Issue #6 (https://github.com/kermitfr/kermit-webui/issues/6) Operation run on a single server is now correctly filtered

--- a/templates/widgets/dynagroups/dynagroupstree.html
+++ b/templates/widgets/dynagroups/dynagroupstree.html
@@ -51,7 +51,7 @@
 				if(node.data.isFolder) {
 					filterType = "compound"
 				} else {
-					filterType = "identity_filter"
+					filterType = "identity"
 				}
 
 				//If we are working on a folder the filter should be ffor all servers in the selected group
