Fixed Issue #7 (https://github.com/kermitfr/kermit-webui/issues/7)

--- a/templates/server/edit.html
+++ b/templates/server/edit.html
@@ -36,6 +36,7 @@
 	</ul>
 	<ul id="column2" class="column">
 		{% widget "ServerEdit" user hostname%}
+		{% widget "SelectedResourceDetails" user %}
 		&nbsp;<br/>&nbsp;<br/>
 	</ul>
 </div>
