--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Max-Age" content="0">
 		<meta http-equiv="Cache-Control" content="no-cache">
-		<title>Kermit WebUI</title>
+		<title>{% trans 'Kermit WebUI' %}</title>
 		<!-- FqvIcon -->
 		<link rel="icon" type="image/png" href="{{STATIC_URL}}images/favicon.png"/>
 		<link rel="apple-touch-icon" href="{{STATIC_URL}}images/favicon.png"/>
